[project]
name = "sift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn[standard]>=0.40.0",
]
